--- a/index.html
+++ b/index.html
@@ -3,49 +3,151 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Future of Space Travel</title>
+    <title>The Badass Future of Space Travel</title>
+    <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Roboto', sans-serif;
             line-height: 1.6;
-            color: #333;
-            max-width: 800px;
+            color: #e0e0e0;
+            background-color: #121212;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            max-width: 1200px;
             margin: 0 auto;
             padding: 20px;
         }
-        h1, h2 {
-            color: #0066cc;
+        header {
+            background-color: #1a1a1a;
+            padding: 20px 0;
+            text-align: center;
+        }
+        h1 {
+            font-family: 'Bungee Spice', cursive;
+            font-size: 3em;
+            margin: 0;
+            color: #ff6b6b;
+            text-shadow: 0 0 10px #ff6b6b;
+        }
+        nav {
+            background-color: #252525;
+            padding: 10px 0;
+        }
+        nav ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+        }
+        nav ul li {
+            margin: 0 15px;
+        }
+        nav ul li a {
+            color: #4ecdc4;
+            text-decoration: none;
+            font-weight: bold;
+            transition: color 0.3s ease;
+        }
+        nav ul li a:hover {
+            color: #ff6b6b;
+        }
+        section {
+            margin: 40px 0;
+            padding: 20px;
+            background-color: #1e1e1e;
+            border-radius: 8px;
+            box-shadow: 0 0 20px rgba(255, 107, 107, 0.1);
+        }
+        h2 {
+            font-family: 'Bungee Spice', cursive;
+            color: #4ecdc4;
+            font-size: 2em;
+            margin-bottom: 20px;
+        }
+        ul {
+            list-style-type: none;
+            padding-left: 20px;
+        }
+        li::before {
+            content: "🚀 ";
+            margin-right: 10px;
+        }
+        .cta {
+            background-color: #ff6b6b;
+            color: #121212;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            font-size: 1.2em;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+        .cta:hover {
+            background-color: #4ecdc4;
+        }
+        footer {
+            text-align: center;
+            padding: 20px 0;
+            background-color: #1a1a1a;
+            color: #e0e0e0;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>The Future of Space Travel</h1>
+        <div class="container">
+            <h1>The Badass Future of Space Travel</h1>
+        </div>
     </header>
-    <main>
-        <section>
-            <h2>Exciting Developments</h2>
-            <p>The future of space travel is incredibly exciting, with numerous developments on the horizon:</p>
+    <nav>
+        <ul>
+            <li><a href="#developments">Developments</a></li>
+            <li><a href="#challenges">Challenges</a></li>
+            <li><a href="#future">The Future</a></li>
+        </ul>
+    </nav>
+    <div class="container">
+        <section id="developments">
+            <h2>Mind-Blowing Developments</h2>
+            <p>Buckle up, space cowboys! The future of space travel is about to get wild:</p>
             <ul>
-                <li>Reusable rockets making space travel more affordable</li>
-                <li>Plans for establishing permanent bases on the Moon and Mars</li>
-                <li>Advanced propulsion systems for faster interplanetary travel</li>
-                <li>Space tourism becoming a reality for civilians</li>
+                <li>Reusable rockets that land themselves like total bosses</li>
+                <li>Lunar bases that'll make your Earth apartment look like a cardboard box</li>
+                <li>Warp drives straight out of your sci-fi dreams (well, almost)</li>
+                <li>Space hotels where the room service is out of this world (literally)</li>
+            </ul>
+        </section>
+        <section id="challenges">
+            <h2>Epic Challenges to Conquer</h2>
+            <p>Houston, we've got some problems (but we're gonna solve 'em):</p>
+            <ul>
+                <li>Keeping astronauts alive and kicking in the cosmic void</li>
+                <li>Dealing with space radiation that'll make you glow (and not in a good way)</li>
+                <li>Building ships tough enough to survive micrometeoroid parties</li>
+                <li>Figuring out how to recycle everything, including yesterday's coffee</li>
+            </ul>
+        </section>
+        <section id="future">
+            <h2>The Mind-Bending Future</h2>
+            <p>Prepare your brain for these upcoming cosmic adventures:</p>
+            <ul>
+                <li>Mars colonies with rad dome houses and epic dust storms</li>
+                <li>Asteroid mining that'll make Gold Rush prospectors jealous</li>
+                <li>Interstellar probes zooming to nearby stars at ludicrous speeds</li>
+                <li>Space elevators that'll take "going up" to a whole new level</li>
             </ul>
         </section>
         <section>
-            <h2>Challenges Ahead</h2>
-            <p>Despite the exciting prospects, there are still challenges to overcome:</p>
-            <ul>
-                <li>Developing sustainable life support systems for long-duration missions</li>
-                <li>Mitigating the health effects of long-term space travel</li>
-                <li>Creating reliable communication systems for deep space missions</li>
-                <li>Addressing space debris and ensuring sustainable space exploration</li>
-            </ul>
+            <h2>Ready to Get Onboard?</h2>
+            <p>The cosmos is calling, and it's time to answer. Are you ready to be part of the most epic adventure in human history?</p>
+            <button class="cta">Join the Space Revolution!</button>
         </section>
-    </main>
+    </div>
     <footer>
-        <p>&copy; 2024 Future Space Travel Enthusiast. All rights reserved.</p>
+        <p>&copy; 2024 Badass Space Travel Visionaries. All rights reserved. 🚀</p>
     </footer>
 </body>
 </html>
