--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Really Badass Future of Space Travel</title>
-    <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <title>The Future of Space Travel</title>
     <style>
         body {
             font-family: 'Roboto', sans-serif;
